@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2011 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
 
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.client.ClientHttpResponse;
@@ -28,10 +29,11 @@ import org.springframework.util.FileCopyUtils;
 /**
  * Default implementation of the {@link ResponseErrorHandler} interface.
  *
- * <p>This error handler checks for the status code on the {@link ClientHttpResponse}: any code with series
- * {@link org.springframework.http.HttpStatus.Series#CLIENT_ERROR} or
- * {@link org.springframework.http.HttpStatus.Series#SERVER_ERROR} is considered to be an error.
- * This behavior can be changed by overriding the {@link #hasError(HttpStatus)} method.
+ * <p>This error handler checks for the status code on the {@link ClientHttpResponse}: any
+ * code with series {@link org.springframework.http.HttpStatus.Series#CLIENT_ERROR} or
+ * {@link org.springframework.http.HttpStatus.Series#SERVER_ERROR} is considered to be an
+ * error. This behavior can be changed by overriding the {@link #hasError(HttpStatus)}
+ * method.
  *
  * @author Arjen Poutsma
  * @since 3.0
@@ -43,7 +45,18 @@ public class DefaultResponseErrorHandler implements ResponseErrorHandler {
 	 * Delegates to {@link #hasError(HttpStatus)} with the response status code.
 	 */
 	public boolean hasError(ClientHttpResponse response) throws IOException {
-		return hasError(response.getStatusCode());
+		return hasError(getStatusCode(response));
+	}
+
+	private HttpStatus getStatusCode(ClientHttpResponse response) throws IOException {
+		HttpStatus statusCode;
+		try {
+			statusCode = response.getStatusCode();
+		}
+		catch (IllegalArgumentException ex) {
+			throw new RestClientException("Unknown status code [" + response.getRawStatusCode() + "]");
+		}
+		return statusCode;
 	}
 
 	/**
@@ -67,15 +80,16 @@ public class DefaultResponseErrorHandler implements ResponseErrorHandler {
 	 * and a {@link RestClientException} in other cases.
 	 */
 	public void handleError(ClientHttpResponse response) throws IOException {
-		HttpStatus statusCode = response.getStatusCode();
-		MediaType contentType = response.getHeaders().getContentType();
+		HttpStatus statusCode = getStatusCode(response);
+		HttpHeaders headers = response.getHeaders();
+		MediaType contentType = headers.getContentType();
 		Charset charset = contentType != null ? contentType.getCharSet() : null;
 		byte[] body = getResponseBody(response);
 		switch (statusCode.series()) {
 			case CLIENT_ERROR:
-				throw new HttpClientErrorException(statusCode, response.getStatusText(), body, charset);
+				throw new HttpClientErrorException(statusCode, response.getStatusText(), headers, body, charset);
 			case SERVER_ERROR:
-				throw new HttpServerErrorException(statusCode, response.getStatusText(), body, charset);
+				throw new HttpServerErrorException(statusCode, response.getStatusText(), headers, body, charset);
 			default:
 				throw new RestClientException("Unknown status code [" + statusCode + "]");
 		}
@@ -83,15 +97,15 @@ public class DefaultResponseErrorHandler implements ResponseErrorHandler {
 
 	private byte[] getResponseBody(ClientHttpResponse response) {
 		try {
-            InputStream responseBody = response.getBody();
-            if (responseBody != null) {
-                return FileCopyUtils.copyToByteArray(responseBody);
-            }
+			InputStream responseBody = response.getBody();
+			if (responseBody != null) {
+				return FileCopyUtils.copyToByteArray(responseBody);
+			}
 		}
 		catch (IOException ex) {
-            // ignore
+			// ignore
 		}
-        return new byte[0];
+		return new byte[0];
 	}
 
 }
