@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2010 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package org.springframework.web.client;
 
 import java.nio.charset.Charset;
 
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 
 /**
@@ -29,9 +30,12 @@ import org.springframework.http.HttpStatus;
  */
 public class HttpServerErrorException extends HttpStatusCodeException {
 
+	private static final long serialVersionUID = -2915754006618138282L;
+
+
 	/**
-	 * Construct a new instance of {@code HttpServerErrorException} based on a {@link HttpStatus}.
-	 *
+	 * Construct a new instance of {@code HttpServerErrorException} based on an
+	 * {@link HttpStatus}.
 	 * @param statusCode the status code
 	 */
 	public HttpServerErrorException(HttpStatus statusCode) {
@@ -39,8 +43,8 @@ public class HttpServerErrorException extends HttpStatusCodeException {
 	}
 
 	/**
-	 * Construct a new instance of {@code HttpServerErrorException} based on a {@link HttpStatus} and status text.
-	 *
+	 * Construct a new instance of {@code HttpServerErrorException} based on an
+	 * {@link HttpStatus} and status text.
 	 * @param statusCode the status code
 	 * @param statusText the status text
 	 */
@@ -49,19 +53,31 @@ public class HttpServerErrorException extends HttpStatusCodeException {
 	}
 
 	/**
-	 * Construct a new instance of {@code HttpServerErrorException} based on a {@link HttpStatus}, status text, and
-	 * response body content.
-	 *
+	 * Construct a new instance of {@code HttpServerErrorException} based on an
+	 * {@link HttpStatus}, status text, and response body content.
 	 * @param statusCode	  the status code
 	 * @param statusText	  the status text
 	 * @param responseBody	the response body content, may be {@code null}
 	 * @param responseCharset the response body charset, may be {@code null}
 	 * @since 3.0.5
 	 */
-	public HttpServerErrorException(HttpStatus statusCode,
-			String statusText,
-			byte[] responseBody,
-			Charset responseCharset) {
+	public HttpServerErrorException(HttpStatus statusCode, String statusText,
+			byte[] responseBody, Charset responseCharset) {
 		super(statusCode, statusText, responseBody, responseCharset);
+	}
+
+	/**
+	 * Construct a new instance of {@code HttpServerErrorException} based on a
+	 * {@link HttpStatus}, status text, and response body content.
+	 * @param statusCode the status code
+	 * @param statusText the status text
+	 * @param responseHeaders the response headers, may be {@code null}
+	 * @param responseBody the response body content, may be {@code null}
+	 * @param responseCharset the response body charset, may be {@code null}
+	 * @since 3.2
+	 */
+	public HttpServerErrorException(HttpStatus statusCode, String statusText,
+			HttpHeaders responseHeaders, byte[] responseBody, Charset responseCharset) {
+		super(statusCode, statusText, responseHeaders, responseBody, responseCharset);
 	}
 }
