@@ -19,6 +19,7 @@ Changes in version 3.1.2 (2012-06-??)
 * add Jackson 2 HttpMessageConverter and View types
 * translate IOException from Jackson to HttpMessageNotReadableException
 * fix content negotiation issue when sorting selected media types by quality value
+* raise RestClientException instead of IllegalArgumentException for unknown status codes
 
 
 Changes in version 3.1.1 (2012-02-16)
